# Boardgame_carcassone

./: CMakeLists.txt  CMakeLists.txt.user.96734b3  README.md  exemple.txt  images.qrc  main.cpp  uml.pu  uml_extension.pu  windowplayer.ui
include/: Plateauwindow.h  SpinBoxDelegate.hpp  Tuilewindow.h  comboboxdialog.h  extension.h  joueur.hpp  mainwindow.h  matrice.hpp  minituile.h  partie.h  pioche.h  pion.h  plateau.h  tuile.h  tuile_base.h  windowextensions.h  windowplayer.h  zone.h
src/: Plateauwindow.cpp  Tuile_abbe.txt  Tuile_auberge.txt  Tuile_base.txt  Tuile_riviere.txt  Tuilewindow.cpp  comboboxdialog.cpp  comboboxdialog.ui  extension.cpp  joueur.cpp  mainwindow.cpp  mainwindow.ui  minituile.cpp  partie.cpp  pion.cpp  plateau.cpp  resources.qrc  test.txt  tuile.cpp  windowextensions.cpp  windowextensions.ui  windowplayer.cpp  windowplayer.ui  zone.cpp
